--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="logo">
             <img class="icone" src="assets/images/luaicone.png" alt="Logo">
-            <span class="titulo">Portfólio da Andressa</span>
+            <span class="titulo">Meu Portfólio</span>
         </div>
 
         <ul>
