--- a/contato.html
+++ b/contato.html
@@ -96,6 +96,8 @@
         <p class="by">Desenvolvido por: Andressa Camillo - 2023 &copy;</p>
     </footer>
 
+    <csript src="assets/js/script.js"></script>
+
 </body>
 
 </html>
