--- a/contato.html
+++ b/contato.html
@@ -95,7 +95,9 @@
         </div>
         <p class="by">Desenvolvido por: Andressa Camillo - 2023 &copy;</p>
     </footer>
-
+    
+     <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
