--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <p class="by">Desenvolvido por: Andressa Camillo - 2023 &copy;</p>
     </footer>
 
+    <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
